fix pagination background color on mobile, pull bold + bold-italic styles from google fonts

--- a/web/app/themes/cfs/assets/styles/components/_pagination.scss
+++ b/web/app/themes/cfs/assets/styles/components/_pagination.scss
@@ -2,7 +2,7 @@
 
 .pagination {
   @extend .font-display;
-  background: $white;
+  background: $gray-lite;
   li {
     display: inline-block;
     // margin-right: grid(1);
